Bug#24248 Problem updating from 5.0.15 to 5.1.12 running under Win XP SP2  - Fix error message to say that "mysql_upgrade" should be run when  a particular error message is found to be missing  - Dont's set default value on blob's - it will not be used anyway.